# fccp

./: README.md
catkin_ws_fullCoverage/devel/: .catkin
catkin_ws_fullCoverage/devel/include/amcl/: AMCLConfig.h
catkin_ws_fullCoverage/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
catkin_ws_fullCoverage/devel/include/global_planner/: GlobalPlannerConfig.h
catkin_ws_fullCoverage/devel/include/ipa_building_msgs/: CheckCoverage.h  CheckCoverageRequest.h  CheckCoverageResponse.h  ExtractAreaMapFromLabeledMap.h  ExtractAreaMapFromLabeledMapRequest.h  ExtractAreaMapFromLabeledMapResponse.h  FindRoomSequenceWithCheckpointsAction.h  FindRoomSequenceWithCheckpointsActionFeedback.h  FindRoomSequenceWithCheckpointsActionGoal.h  FindRoomSequenceWithCheckpointsActionResult.h  FindRoomSequenceWithCheckpointsFeedback.h  FindRoomSequenceWithCheckpointsGoal.h  FindRoomSequenceWithCheckpointsResult.h  MapSegmentationAction.h  MapSegmentationActionFeedback.h  MapSegmentationActionGoal.h  MapSegmentationActionResult.h  MapSegmentationFeedback.h  MapSegmentationGoal.h  MapSegmentationResult.h  RoomExplorationAction.h  RoomExplorationActionFeedback.h  RoomExplorationActionGoal.h  RoomExplorationActionResult.h  RoomExplorationFeedback.h  RoomExplorationGoal.h  RoomExplorationResult.h  RoomInformation.h  RoomSequence.h
catkin_ws_fullCoverage/devel/include/ipa_building_navigation/: BuildingNavigationConfig.h
catkin_ws_fullCoverage/devel/include/ipa_room_exploration/: CoverageMonitorConfig.h  RoomExplorationConfig.h
catkin_ws_fullCoverage/devel/include/ipa_room_segmentation/: RoomSegmentationConfig.h
catkin_ws_fullCoverage/devel/include/synchronizer_laser_imu/: can_msg.h
catkin_ws_fullCoverage/devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
catkin_ws_fullCoverage/devel/lib/amcl/: amcl
catkin_ws_fullCoverage/devel/lib/base_local_planner/: point_grid
catkin_ws_fullCoverage/map/: map-shang.pgm  map.yaml  map2.pgm  map2.yaml  map_dixia.yaml
catkin_ws_fullCoverage/shell/: clean_car.sh  control.sh  laser_bash.sh  move_base.sh  move_bash2.sh  real_nav.sh  roscore.sh  set_target.sh  test.sh
catkin_ws_fullCoverage/src/clean_car_description_10_23/: CMakeLists.txt
catkin_ws_fullCoverage/src/clean_car_target_10_23/: CMakeLists.txt  package.xml
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/: .canhelper.cpp.swp  CMakeLists.txt  hfi_a9_ros.py  package.xml
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/include/: canhelper.h  msg_syn.h
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/include/IExxx/: IExxx.h  ie_buffer.h  ie_structs.h
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/launch/: sync_laser_imu.launch
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/meshes/: osight-iexxx.dae  osight-iexxx.stl
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/msg/: can_msg.msg
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/scripts/: osight_set_IP  osight_set_net_mode  osight_set_net_mode.c
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/src/: .msg_syn.cpp.swp  IExxx.cpp  Synchronizer.cpp  can_node.cpp  can_node_test.cpp  canhelper.cpp  laser_listener.cpp  laser_node.cpp  msg_syn.cpp  synchroy.cpp
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/tutorials/: doc.md
catkin_ws_fullCoverage/src/laser_imu_10_23/synchronizer_laser_imu/urdf/: osight_iexxx.urdf.xacro
(+306 files in other folders)
