<?xml version="1.0"?>
<package format="2">
  <name>synchronizer_laser_imu</name>
  <version>0.1.0</version>
  <description>The synchronizer_laser_imu package</description>
  <maintainer email="1076980246@qq.com">HandsFree</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.hfreetech.org</url>
  <url type="bugtracker">https://github.com/HANDS-FREE/handsfree/issues</url>
  <author email="1076980246@qq.com">weiluo</author>
  <license>LGPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp_serialization</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend> 
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend> 
</package>
